# ThaumatoAnakalyptor

./: .gitignore  .gitmodules  DockerfileThaumato  README.md  ThaumatoAnakalyptor.py  debugging_downsampled_point_cloud.ply  environment_thaumato.yml  overlapp_threshold.yaml
.github/workflows/: build_docker.yml
FAS/: ArrayFAS.java  ArrayWeightedFAS.java  BergerShorFAS.java  BergerShorWeightedFAS.java  DoublyLinkedList.java  KwikSortFAS.java  Node.java  README.md  SiftFAS.java  SimpleFAS.java  SortFAS.java  dfsFAS.java  dllFAS.java  graph_to_WebGraph.py  sequence_to_graph.py
FAS/graphs/cnr/: cnr-2000-t.graph  cnr-2000-t.obl  cnr-2000-t.offsets  cnr-2000-t.properties  cnr-2000.graph  cnr-2000.obl  cnr-2000.offsets  cnr-2000.properties  cnr-2000_maxDeltas.txt  cnr-2000_skews.txt
FAS/graphs/thaumato/: graph.edgelist  sorted_graph.edgelist  thaumatograph-t.graph  thaumatograph-t.offsets  thaumatograph-t.properties  thaumatograph.graph  thaumatograph.offsets  thaumatograph.properties  thaumatograph_maxDeltas.txt  thaumatograph_sequence.txt  transpose_graph.edgelist  transpose_sorted_graph.edgelist
GP extraction/: .gitignore  extract_GP_grid_cells.py
GUI/: CollapsibleBox.py  ConfigWindow.py  MainWindow.py  ThaumatoAnakalyptor.xcf  UmbilicusWindow.py
ThaumatoAnakalyptor/: .gitignore  Pyramid_Random_Walks.py  Random_Walks.py  add_random_colors_to_pointcloud.py  align_patches_normals_to_umbilicus.py  cut_mesh_z.py  cut_tif_region.py  finalize_mesh.py  fix_mesh.py  generate_half_sized_grid.py  generate_surface_pointgroup_dataset.py  generate_training_samples_from_annotations.py  genetic_sheet_stitching.py  graph_to_mesh.py  grid_to_pointcloud.py  inference_postprocess_giorgio.py  instances_to_graph.py  instances_to_graph_7z.py  instances_to_sheets.py  instances_to_sheets_giorgio.py  instructions.txt  large_mesh_to_surface.py  memmap_to_layers.py  memory_share_test.py  mesh_merger.py  mesh_quality.py  mesh_to_mask3d_labels.py  mesh_to_surface.py  mesh_to_uv.py  mesh_transform.py  multi_gpu_test.py  obj_to_ppm.py  overlapp_threshold.yaml  path_game.py  path_game_vispy.py  pointcloud_to_instances.py  pointcloud_to_instances_giorgio.py  pointcloud_to_mesh_tests.py  ppm_to_layers.py  sheet_computation.py  (+8 more)
ThaumatoAnakalyptor/BP_node_deactivation/: README.md  bp_pgmax_node_deactivation.py
ThaumatoAnakalyptor/BP_node_deactivation/utils_node_deactivation/: bin_writer.py  factors.py  graph.py
ThaumatoAnakalyptor/belief_propagation/: README.md  bp_pgmax.py
ThaumatoAnakalyptor/belief_propagation/utils/: factors.py  graph.py
ThaumatoAnakalyptor/debug/: copy_block_range.py  copy_ply_range.py  ply_to_obj.py
ThaumatoAnakalyptor/graph_problem/: .gitignore  CMakeLists.txt  example.cpp  main.cpp  main_gpu.cpp  node_structs.h  readme.md  scroll2_winding_direction_auto.txt  solve_gpu.cu  solve_gpu.h
ThaumatoAnakalyptor/mask3d/: .gitignore  environment.yml  inference.py  inference_.py  install_commands.txt  main_instance_segmentation.py
ThaumatoAnakalyptor/mask3d/conf/: config_base_instance_segmentation.yaml
ThaumatoAnakalyptor/mask3d/conf/augmentation/: volumentations_aug.yaml
ThaumatoAnakalyptor/mask3d/conf/callbacks/: callbacks_instance_segmentation.yaml
ThaumatoAnakalyptor/mask3d/conf/data/: indoor.yaml
ThaumatoAnakalyptor/mask3d/conf/data/collation_functions/: voxelize_collate.yaml
ThaumatoAnakalyptor/mask3d/conf/data/datasets/: s3dis.yaml  stpls3d.yaml  stpls3d_working_inference_but_not_train.yaml
ThaumatoAnakalyptor/mask3d/conf/logging/: full.yaml
ThaumatoAnakalyptor/mask3d/conf/matcher/: hungarian_matcher.yaml
ThaumatoAnakalyptor/mask3d/conf/model/: mask3d.yaml
ThaumatoAnakalyptor/mask3d/conf/optimizer/: adamw.yaml
ThaumatoAnakalyptor/mask3d/conf/trainer/: trainer.yaml  trainer600.yaml
ThaumatoAnakalyptor/mask3d/data/processed/stpls3d/: .gitignore  color_mean_std.yaml  label_database.yaml  test_database.yaml  train_database.yaml  train_validation_database.yaml  validation_database.yaml
ThaumatoAnakalyptor/mask3d/data/raw/thaumatoanakalyptor/: .gitignore  replace_1_to_2.py
ThaumatoAnakalyptor/mask3d/datasets/: random_cuboid.py  semseg.py  thaumato_dataset.py  utils.py
ThaumatoAnakalyptor/mask3d/datasets/preprocessing/: thaumato_preprocessing.py
ThaumatoAnakalyptor/mask3d/models/: criterion.py
ThaumatoAnakalyptor/mask3d/scripts/stpls3d/: stpls3d_test.sh  stpls3d_train copy.sh  stpls3d_train.sh  stpls3d_val.sh
ThaumatoAnakalyptor/mask3d/trainer/: trainer.py
ThaumatoAnakalyptor/mask3d/utils/: utils.py
ThaumatoAnakalyptor/rendering_utils/: interpolate_image_3d.py  ppm_writer.py  ppmparser.py  torch_ppm.py
ThaumatoAnakalyptor/sheet_generation/: CMakeLists.txt  evolutionary_solve.cpp  evolutionary_solve_utils.h  happly.h  meshing_utils.cpp  nanoflann.h  pointcloud_processing.cpp  solver.cpp  test.py
ThaumatoAnakalyptor/sheet_generation/hdbscan/: CMakeLists.txt  README.md
ThaumatoAnakalyptor/sheet_generation/hdbscan-cpp_/: .gitignore  .travis.yml  LICENSE.md  Makefile  README.md  main
ThaumatoAnakalyptor/sheet_generation/hdbscan-cpp_/HDBSCAN-CPP/: run.sh
ThaumatoAnakalyptor/sheet_generation/hdbscan-cpp_/HDBSCAN-FourProminentClusterExample/: FourProminentClusterExample.cpp
ThaumatoAnakalyptor/sheet_generation/hdbscan-cpp_/HDBSCANDataset/: FourProminentClusterDataset.csv
documentation/ThaumatoAnakalyptor - Technical Report and Roadmap/: report_template.tex
umbilici/scroll_1/: umbilicus.txt  umbilicus_old.txt  umbilicus_sp.txt
umbilici/scroll_2/: umbilicus.txt
umbilici/scroll_3/: umbilicus_old.txt
umbilici/scroll_4/: umbilicus.txt
